UI and Quality of life changes

--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -1,7 +1,8 @@
 ﻿@inherits LayoutComponentBase
 
 <div class="page" data-theme="@(isDarkMode ? "dark" : "light")">
-    <div class="sidebar">
+
+    <div class="sidebar" style="width: 250px; flex-shrink: 0;">
         <NavMenu />
     </div>
 
